font import and assign, back to top goes to top

--- a/Week-1-Project/styles.css
+++ b/Week-1-Project/styles.css
@@ -75,3 +75,16 @@
     min-width: 80%;
     min-height: 25%;
 }
+
+.font-quicksand {
+    font-family: 'Quicksand', sans-serif;
+}
+
+.font-abel {
+    font-family: 'Abel', sans-serif;
+
+}
+
+.font-mich {
+    font-family: 'Michroma', sans-serif;
+}
