--- a/Week-1-Project/styles.css
+++ b/Week-1-Project/styles.css
@@ -116,11 +116,21 @@
 }
 
 @media (min-width: 772px) {
-    .margin-right-5px {
-        margin-right: 5px;
+    .padding-right-15px {
+        padding-right: 15px;
     }
 }
 
 .footer-padding {
     padding-top: 25px;
+}
+
+@media (max-width: 772px) {
+    .padding-bottom-15px {
+        padding-bottom: 15px;
+    }
+}
+
+.padding-bottom-10px {
+    padding-bottom: 10px;
 }
