--- a/week2-project/sketchpad.css
+++ b/week2-project/sketchpad.css
@@ -18,9 +18,20 @@
     flex-basis: auto;
 }
 
+.color-pick-containers {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex: auto;
+    flex-flow: wrap;
+    justify-content: space-evenly;
+    padding-bottom: 5px;
+}
+
 .canvas {
     background-color: whitesmoke;
     min-height: 250px;
+    max-height: 475px;
     flex-basis: auto;
 }
 
@@ -40,19 +51,22 @@
 }
 
 .slider {
-    -webkit-appearance: none;
-    width: 100%;
+    /* width: 100%; */
     height: 15px;
     border-radius: 5px;
     background: #d3d3d3;
     outline: none;
     opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
+    /* -webkit-transition: .2s;
+    transition: opacity .2s; */
+    padding: 5px;
 }
 
 .slider-container {
-    width: 100%;
+    display: flex;
+    min-height: 150px;
+    justify-content: space-between;
+    flex-direction: column;
 }
 
 .slider:hover {
