--- a/week2-project/sketchpad.css
+++ b/week2-project/sketchpad.css
@@ -33,6 +33,7 @@
     min-height: 250px;
     max-height: 475px;
     flex-basis: auto;
+
 }
 
 .flexbasis25 {
@@ -51,14 +52,11 @@
 }
 
 .slider {
-    /* width: 100%; */
     height: 15px;
     border-radius: 5px;
-    background: #d3d3d3;
+    /* background: #d3d3d3; */
     outline: none;
     opacity: 0.7;
-    /* -webkit-transition: .2s;
-    transition: opacity .2s; */
     padding: 5px;
 }
 
