--- a/Week-3/BlackJack/blakcjack.Css
+++ b/Week-3/BlackJack/blakcjack.Css
@@ -1,6 +1,17 @@
+* {
+    background-color: #35654D;
+    font-size: 25px;
+}
+
 img {
     max-width: 100%;
     max-height: 100%;
+}
+
+button {
+    border-radius: 100% / 100%;
+    font-size: 25px;
+    background-color: white;
 }
 
 .border {
@@ -16,16 +27,24 @@ img {
 .header {
     display: flex;
     flex-basis: 100%;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 50px;
 }
 
 .cardArea {
     display: flex;
     height: auto;
-    flex-basis: 100%;
+    flex-basis: 0;
     flex-direction: row wrap;
+    justify-content: center;
 }
 
 .card {
     flex-basis: auto;
     max-height: 250px;
+}
+
+.padding10px {
+    padding: 10px;
 }
